create the better request and response schemas and the handlers annotations

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ REDIS_TOKEN=your_upstash_redis_token
 
 GOOGLE_OAUTH_CLIENT_ID=your_client_id
 GOOGLE_OAUTH_CLIENT_SECRET=your_secret
-GOOGLE_OAUTH_REDIRECT_URL=http://localhost:8080/api/auth/google/callback
+GOOGLE_OAUTH_REDIRECT_URL=http://yene-hub-ls0y.onrender.com/api/auth/google/callback
 JWT_SECRET=your_jwt_secret
 
 EMAIL_SENDER=email
